[project]
name = "neirofitnessapp"
version = "0.1.0"
description = ""
authors = [
    {name = "GenKet",email = "93544444+GenKet@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "numpy (>=1.26,<2.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.100,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
